tests/f-stack/error/f-stack-error5.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1
0.100 > S 0:0(0) <...>

+0.1 < S. 1:513(512) ack 1 win 19712 
// f-stack/FreeBSD ack 513
+0.1 > . 1:1(0) ack 1

